--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.url=jdbc:mariadb://svc.sel4.cloudtype.app:30474/springboot
 spring.datasource.username=root
 spring.datasource.password=1234
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
