--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://svc.sel4.cloudtype.app:30474/springboot
-spring.datasource.username=root
-spring.datasource.password=12345
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://svc.sel4.cloudtype.app:30474/springboot
+#spring.datasource.username=root
+#spring.datasource.password=12345
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
