--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://mariadb::3306/springboot
+spring.datasource.url=jdbc:mariadb://svc.sel4.cloudtype.app:30474/springboot
 spring.datasource.username=root
 spring.datasource.password=1234
 
