--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ targetCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
+	maven { url "https://jitpack.io" } // JitPack 저장소 추가
 }
 
 dependencies {
@@ -20,6 +21,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor('org.projectlombok:lombok:1.18.24')
+
 }
 
 tasks.named('test') {
