--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
+spring.config.import=optional:file:.env[.properties]
+
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://mariadb:3306/springboot
+spring.datasource.url=jdbc:mariadb://${DB_URL}/sejongclass
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
